# aardvark.assembler

./: .gitignore  Arm64.sln  Assembler.sln  README.md  RELEASE_NOTES.md  build.cmd  build.sh  buildnative.cmd  buildnative.sh  paket.dependencies
.config/: dotnet-tools.json
.github/workflows/: build-native.yml  publish.yml  test.yml
docs/: FragmentProgram.fsx
libs/Native/Aardvark.Assembler/mac/AMD64/: libjitmem.dylib
libs/Native/Aardvark.Assembler/mac/ARM64/: libjitmem.dylib
libs/Native/Aardvark.Assembler/windows/AMD64/: jitmem.lib
prebuilt/Native/Aardvark.Assembler/mac/AMD64/: libjitmem.dylib
prebuilt/Native/Aardvark.Assembler/mac/ARM64/: libjitmem.dylib
prebuilt/Native/Aardvark.Assembler/windows/AMD64/: jitmem.lib
src/: Assembler.sln
src/Aardvark.Assembler/: AMD64.fs  ARM64.fs  Aardvark.Assembler.fsproj  AdaptiveFragmentProgram.fs  Assembler.fs  AssemblerTypes.fs  FragmentProgram.fs  JitMem.fs  SystemMemoryStream.fs  paket.references  paket.template
src/Arm64/: AMD64.fs  ARM64.fs  Arm64.fsproj  Assembler.fs  Program.fs
src/Demo/: Demo.fsproj  Program.fs  paket.references
src/Tests/: Program.fs  Tests.fs  Tests.fsproj  paket.references
src/Tests/TestResults/: Ionide.trx
src/jitmem/: CMakeLists.txt  Executable.cpp  Executable.h
